# booster

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
apps/: CMakeLists.txt  main.cpp
apps/kinematic/: CMakeLists.txt  main.cpp
apps/runner/: CMakeLists.txt  main.cpp  plugin.hpp
examples/: config.json  sample.cpp
include/booster/: beetle.hpp  booster.hpp
include/booster/ecs/: manager.hpp  registry.hpp
include/booster/ecs/component/: acceleration.hpp  json.hpp  position.hpp  team.hpp  velocity.hpp
include/booster/ecs/component/json/: acceleration.hpp  position.hpp  team.hpp  velocity.hpp
include/booster/ecs/prefab/: dynamic_body.hpp  entity.hpp  registry.hpp  team.hpp
include/booster/ecs/system/: movement.hpp  registry.hpp
include/booster/utility/: json.hpp
include/booster/utility/json/: mp_units.hpp
src/: CMakeLists.txt
src/ecs/: manager.cpp
src/ecs/prefab/: dynamic_body.cpp  entity.cpp  team.cpp
src/ecs/system/: movement.cpp
